welcome.lessons.welcome.loopwhile.LoopWhile.scala.error
Program:3: error: '(' expected but identifier found.
while estFaceMur(){
      ^Program:10: error: illegal start of simple expression
	}
        ^